# reliagent-bench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
analysis/: README.md
analysis/benchmark_history/: bench1.0_ds1.0_tm0.8.0_seed_k5_seed0.json  bench1.1_ds0.2_tm0.8.0_seed_k5_seed0.json  bench1.3_ds0.3_tm0.8.0_seed_k5_seed0.json
analysis/category_reports/: bench1.0_ds1.0_tm0.8.0_seed_k5_seed0.md  bench1.1_ds0.2_tm0.8.0_seed_k5_seed0.md  bench1.3_ds0.3_tm0.8.0_seed_k5_seed0.md
analysis/comparison_reports/: comparison_k5_seed0.md  environment_k5_seed0.json
analysis/failure_reports/: bench1.0_ds1.0_tm0.8.0_seed_k5_seed0.md  bench1.1_ds0.2_tm0.8.0_seed_k5_seed0.md  bench1.3_ds0.3_tm0.8.0_seed_k5_seed0.md
analysis/router_reports/: router_matrix_k5_seed0.md
analysis/validation_reports/: validation_ds0.3_k5_seed0.md  validation_ds1.0_k5_seed0.md
datasets/sample/: tool_failure_001.json
docs/: annotation.md  audit.md  benchmark.md  comparison.md  metrics.md  research-notes.md  roadmap.md  semantic-provenance-plan.md
docs/articles/: 01-does-temporal-reasoning-help.md
src/agent_benchmark/: scoring.py
src/reliagent_bench/: __init__.py
src/reliagent_bench/memory/: README.md  __init__.py  analysis.py  audit.py  baselines.py  cli.py  cross_system.py  dataset.py  evaluator.py  external.py  history.py  metrics.py  report.py  router_experiment.py  router_pipeline.py  routers.py  runner.py  validate.py
src/reliagent_bench/memory/datasets/: FROZEN_MANIFEST.json
src/reliagent_bench/memory/results/: seed_ablation.md  seed_k5_seed0.json  seed_report.md
tests/: test_memory_analysis.py  test_memory_benchmark.py  test_memory_crosssystem.py  test_memory_metrics.py  test_memory_routers.py  test_memory_validate.py  test_scoring.py
