[project]
name = "reliagent-bench"
version = "0.1.0"
description = "ReliAgent Bench — reproducible reliability benchmark for tool-using, memory-enabled AI agents"
requires-python = ">=3.11"
authors = [{ name = "Ruxi Zhang", email = "ruxiz2018@gmail.com" }]
license = "Apache-2.0"
dependencies = ["typedmem>=0.8.0"]

[project.urls]
Homepage = "https://github.com/canis-minor/reliagent-bench"
Initiative = "https://github.com/canis-minor"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
reliagent-bench-memory = "reliagent_bench.memory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reliagent_bench"]

[tool.hatch.build.targets.wheel.force-include]
"src/reliagent_bench/memory/datasets" = "reliagent_bench/memory/datasets"

[tool.pytest.ini_options]
testpaths = ["tests"]
